// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android generation methods should add a sanitizer for the function with the correct name 1`] = `
Object {
  "args": Array [
    Object {
      "type": "Integer",
      "value": 4,
    },
    Object {
      "type": "Double",
      "value": 42,
    },
  ],
  "method": "scrollInDirection",
  "target": Object {
    "type": "Class",
    "value": "com.wix.detox.espresso.DetoxAction",
  },
}
`;

exports[`Android generation methods should generate type checks 1`] = `"times should be a number, but got FOO (string)"`;

exports[`Android generation methods should return adapter calls 1`] = `
Object {
  "args": Array [
    Object {
      "type": "Integer",
      "value": 3,
    },
  ],
  "method": "multiClick",
  "target": Object {
    "type": "Class",
    "value": "com.wix.detox.espresso.DetoxAction",
  },
}
`;

exports[`Android generation validation Matcher<View> should fail getting no object 1`] = `"m1 should be an instance of Matcher, got \\"I am a string\\", it appears that it is no object"`;

exports[`Android generation validation Matcher<View> should fail with a wrong class 1`] = `"m1 should be an instance of Matcher, got \\"[object Object]\\", it appears that it has a wrong class name: \\"AnotherClass\\""`;
